			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

VERSION 5.2.3 (Jul 04, 2003)
============================

  * ENHANCED: make trace/0 work while skipping, so an explicit trace command
    always works.  Alan Baljeu.

  * FIXED: Bug#71: graphical tracer confused about (a,b),c nested inside
    an if-then-else.  Holger Kanwischer.

  * FIXED: call_cleanup/3 to call the handler on deterministic exit in
    debug mode.  Holger Kanwischer.

  * MODIFIED: hide predicates starting with $ from listing/0.  Paulo Moura.

  * FIXED: compiler warnings on initPrologThreads().  Paulo Moura.

  * MODIFIED: Predicates whose name starts with '$' are automatically
    hidden from the tracer.  To comfort Logtalk.  Paulo Moura.

  * FIXED: retractall/1 to call setDynamicProcedure() instead of simply
    modifying the predicate.  setDynamicProcedure() to call the clause
    garbage collector before deciding it cannot turn static predicate
    with clauses into a dynamic one.  Anders Bouwer.

  * FIXED: Deadlock in thread_statistics on `self'.  Sergey Tikhonov.

  * FIXED: plwin.exe menu link to the XPCE documentation.  Robert Shiplett.

  * INSTALL: fixed various path-problems in the packages.  Michael Piefel.

  * ADDED: Added #define _THREAD_SAFE for FreeBSD (Clemens Fischer).  Also,
    make plld add -D_THREAD_SAFE on this platform if prolog support threading.

  * FIXED: don't give a warning on pl -L128m.  John Li.

  * ADDED: plld --version to run <cc> --version and test for GCC version.
    Michael Piefel.

  * FIXED: toplevel configure and makefile driver

  * FIXED: Bug #68: building on  cygwin.  Lourens van der Meij.

VERSION 5.2.2 (Jun 23, 2003)
============================

  * MAYBEFIXED: Bug#68: lacking headers compiling pl-stream.c.  Lourens